publications 토글 제목 수정중
TODO
- show 됐을 때 토글 버튼이 아래쪽으로 보도록
- 연도별로 수정

--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,23 @@ h6 {
 }
 
 /* publication */
+.pub-row {
+  display: flex;
+}
+
+.pub-year-title {
+  background: transparent;
+  padding: 0;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.pub-year-title h3 {
+  padding: 0;
+  margin: 0;
+}
+
 .list-group-item a {
   margin-left: auto;
 }
