--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,7 @@ h6 {
 }
 
 #publications .badge {
-  margin: 4px 0px 4px;
+  margin: 4px 6.5px 4px 0px;
   font-size: 12px;
   font-weight: 300;
   word-break: break-word;
