pub 아코디언 active일 때 테마 컬러로 수정

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,12 @@ h6 {
   hyphens: manual;
 }
 
+/* 아코디언뷰 */
+.ui-state-active {
+  background: var(--theme-color);
+  border: none;
+}
+
 /* navbar */
 .navbar-brand img {
   margin-right: 4px;
@@ -355,7 +361,6 @@ h6 {
   color: #770001;
   font-weight: 550;
 }
-
 
 @media (max-width: 1400px) {
   #navbar {
