링크색깔수정

--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,11 @@
 }
 
 a:link {
-  color : rgb(255, 255, 255);
+  color : rgb(255, 255, 255) !important; 
 }
 
 a:hover {
-  color : rgb(158, 249, 255);
+  color : rgb(158, 249, 255) !important;
 }
 
 /* Apply "Noto Sans KR" font to all heading elements  */
