--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,12 @@
   font-family: "Noto Sans KR", sans-serif;
 }
 
+/* 내비게이션 픽셀크기증가 - 추교수님 요구사항 */
+.dropdown-menu, nav#navbar-main li.nav-item {
+  font-size: 15px !important;
+}
+
+
 /* Apply "Noto Sans KR" font to all heading  elements  */
 h1,
 h2,
