--- a/css/style.css
+++ b/css/style.css
@@ -522,6 +522,11 @@ h6 {
   margin-right: 10px;
 }
 
+/* News Section */
+.news-gallery-items .card {
+  margin-right: 4px;
+}
+
 .news-ul p,
 .research-projects-ul li p {
   margin-bottom: 8px;
@@ -818,6 +823,7 @@ section {
 }
 
 :root {
-  --theme-color: rgba(63, 81, 181, 1);
-  --hover-color: #677dff;
+  --theme-color: #3f51b5;
+  --detail-button-color: #677dff;
+  --hover-color: #4a5fd4;
 }
