--- a/css/style.css
+++ b/css/style.css
@@ -221,6 +221,23 @@ h6 {
   margin: 0px 12px;
 }
 
+/* hpic in media */
+.iframe-container {
+  margin-top: 4%;
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; /* 16:9 비율 */
+  height: 0;
+}
+
+.video-embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 80%;
+  height: 80%;
+}
+
 /* publication */
 .pub-title-row {
   display: flex;
@@ -719,6 +736,11 @@ section {
 }
 
 @media (max-width: 1199px) {
+  .video-embed {
+    width: 100%;
+    height: 100%;
+  }
+
   #patent .card-text {
     margin: 0 !important;
     overflow: hidden;
