--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,7 @@ h6 {
   /* 이 속성은 최신 브라우저에서만 지원 */
   white-space: normal;
   /* 텍스트를 여러 줄로 표시 */
+  overflow: hidden;
 }
 
 .card-text {
@@ -226,7 +227,8 @@ h6 {
   margin-top: 4%;
   position: relative;
   width: 100%;
-  padding-bottom: 56.25%; /* 16:9 비율 */
+  padding-bottom: 56.25%;
+  /* 16:9 비율 */
   height: 0;
 }
 
