--- a/css/style.css
+++ b/css/style.css
@@ -495,15 +495,40 @@ h6 {
   box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.1);
 }
 
-/* people cards */
+/* people*/
+#people .accordion .wrapper {
+  margin: 16px 0;
+}
 
 #people .row {
   display: flex;
   justify-content: center;
 }
 
-#people h3 {
+.user-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 20px;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  box-shadow: 0 2px 20px -5px rgba(0, 0, 0, 0.5);
+}
+
+#people h3:not(.accordion h3) {
   text-align: center;
+  margin-bottom: 1.5rem;
+}
+
+#people .ui-accordion .ui-accordion-content {
+  padding: 0 1.5rem;
+}
+
+#people .accordion h3 {
+  text-align: left;
 }
 
 /* 교수님 왼쪽 프로필 */
@@ -521,6 +546,11 @@ h6 {
 
 .portrait-title h3 {
   font-size: 0.8vw;
+}
+
+#people .portrait {
+  height: 150px;
+  width: 150px;
 }
 
 /* 학생들 프로필 */
@@ -849,7 +879,7 @@ section {
     font-size: 16px;
   }
 
-  .user-card {
+  /* .user-card {
     display: block;
   }
 
@@ -861,7 +891,7 @@ section {
   .user-card-img img {
     width: 100%;
     height: 200px;
-  }
+  } */
 }
 
 /* Breakpoint SM */
