--- a/css/style.css
+++ b/css/style.css
@@ -527,13 +527,16 @@ h6 {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #fff;
-  border-radius: 10px;
   padding: 20px;
   width: 100%;
   position: relative;
   overflow: hidden;
-  box-shadow: 0 2px 20px -5px rgba(0, 0, 0, 0.5);
+}
+
+.profile-left {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 #people h3:not(.accordion h3) {
