이름 줄바꿈 방지

--- a/css/style.css
+++ b/css/style.css
@@ -514,6 +514,10 @@ h6 {
   cursor: pointer;
 }
 
+#people .portrait-title h2 {
+  white-space: nowrap;
+}
+
 #people .accordion .wrapper {
   margin: 16px 0;
 }
