--- a/css/style.css
+++ b/css/style.css
@@ -529,7 +529,7 @@ h6 {
 
 .user-card {
   display: flex;
-  align-items: center;
+  align-items: left;
   justify-content: center;
   padding: 20px;
   width: 100%;
