--- a/css/style.css
+++ b/css/style.css
@@ -530,7 +530,7 @@ h6 {
 .user-card {
   display: flex;
   align-items: left;
-  justify-content: center;
+  justify-content: left;
   padding: 20px;
   width: 100%;
   position: relative;
