--- a/css/style.css
+++ b/css/style.css
@@ -593,7 +593,7 @@ h6 {
 }
 
 .user-card-info {
-  text-align: center;
+  text-align: left;
   padding-left: 12px;
   margin-left: 20px;
   width: 60%;
