--- a/css/style.css
+++ b/css/style.css
@@ -537,6 +537,14 @@ h6 {
   overflow: hidden;
 }
 
+/*timeline 들여쓰기*/
+h3#2025 + div ul,
+h3#2024 + div ul,
+h3#2023 + div ul,
+h3#2022 + div ul {
+  padding-left: 20px;
+}
+
 .profile-left {
   display: flex;
   flex-direction: column;
